# generic-auth

./: .gitignore  .stylish-haskell.yaml  LICENSE  README.md  generic-auth.cabal  shell.nix  stack.yaml
authlist/: Main.hs
doctest/: Doctest.hs
slides/generic-auth/: generic-auth.lhs
slides/includes/: setup.fmt
src/Data/: Auth.hs  Fix.hs
src/Data/Auth/: Core.hs  Hash.hs  Monad.hs  Serialize.hs
src/Data/Auth/Core/: Auth.hs  Authenticatable.hs  Monad.hs  Role.hs
src/Data/Auth/Examples/: AdHocTree.hs  List.hs  Tree.hs
src/Data/Auth/Internal/: Auth.hs  Authenticatable.hs  Monad.hs
src/Data/Auth/Util/: Hash.hs
src/Data/AuthFix/: Example.hs  Fix.hs  Kleisli.hs  Monad.hs  Prover.hs  Verifier.hs
src/Data/AuthFix/Fix/: Example.hs
src/Data/Fix/: Examples.hs
src/Examples/: AdHocTree.hs  List.hs  Tree.hs
test/Data/Auth/: HashSpec.hs
test/Data/Auth/Examples/: TreeSpec.hs
test/Data/Auth/Util/: HashSpec.hs
test/Examples/: TreeSpec.hs
