name:                generic-auth
version:             0.1.0.0
synopsis:            Generic Authenticated Data Types
-- description:
homepage:            https://github.com/brunjlar/generic-auth#readme
license:             BSD3
license-file:        LICENSE
author:              Lars Bruenjes
maintainer:          brunjlar@gmail.com
copyright:           (c) 2017 Lars Bruenjes
category:            Crypto
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Auth.Core
                     , Data.Auth.Internal.Auth
                     , Data.Auth.Internal.Authenticatable
                     , Data.Auth.Internal.Monad
                     , Data.Auth.Examples.Tree
                     , Data.Auth.Util.Hash
  build-depends:       base >= 4.7 && < 5
                     , base16-bytestring
                     , binary
                     , bytestring
                     , comonad
                     , cryptonite
                     , exceptions
                     , free
                     , memory
                     , mtl
                     , pipes
                     , transformers
  default-language:    Haskell2010
  ghc-options:         -Wall

source-repository head
  type:     git
  location: https://github.com/brunjlar/generic-auth
