name:                generic-auth
version:             0.1.0.0
synopsis:            Generic Authenticated Data Types
-- description:
homepage:            https://github.com/brunjlar/generic-auth#readme
license:             BSD3
license-file:        LICENSE
author:              Lars Bruenjes
maintainer:          brunjlar@gmail.com
copyright:           (c) 2017 Lars Bruenjes
category:            Crypto
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Auth
                     , Data.Auth.Core
                     , Data.Auth.Hash
                     , Data.Auth.Monad
                     , Data.Auth.Examples.AdHocTree
                     , Data.Auth.Examples.List
                     , Data.Auth.Examples.Tree
                     , Data.AuthFix.Example
                     , Data.AuthFix.Monad
                     , Data.AuthFix.Prover
                     , Data.AuthFix.Verifier
                     , Data.Fix
                     , Data.Fix.Examples
  build-depends:       base >= 4.11 && < 5
                     , base16-bytestring
                     , binary
                     , bytestring
                     , comonad
                     , cryptonite
                     , exceptions
                     , free
                     , memory
                     , mtl
                     , network
                     , pipes
                     , QuickCheck
                     , transformers
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base >= 4.11 && < 5
                     , binary
                     , hspec
                     , generic-auth
                     , QuickCheck
  other-modules:       Data.Auth.Examples.TreeSpec
                     , Data.Auth.HashSpec
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite doctest
  type:                exitcode-stdio-1.0
  hs-source-dirs:      doctest
  main-is:             Doctest.hs
  build-depends:       base >= 4.11 && < 5
                     , doctest
  ghc-options:         -Wall
  default-language:    Haskell2010

executable authlist
  hs-source-dirs:      authlist
  main-is:             Main.hs
  build-depends:       base >= 4.11 && < 5
                     , generic-auth
  ghc-options:         -Wall -O2
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/brunjlar/generic-auth
